--- a/frontend/src/pages/Templates.scss
+++ b/frontend/src/pages/Templates.scss
@@ -11,6 +11,16 @@
       flex-wrap: wrap;
       justify-content: space-between;
       width: 100%;
+      height: 85vh;
+      overflow-y: auto;
+      position: relative;
+      margin-bottom: 2rem;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+      }
     }
 
     .template-footer {
