--- a/frontend/src/pages/Templates.scss
+++ b/frontend/src/pages/Templates.scss
@@ -7,11 +7,12 @@
     position: relative;
     
     .templates-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 30px;
       width: 100%;
-      height: 85vh;
+      height: auto;
+      padding: 8px 15px;
       overflow-y: auto;
       position: relative;
       margin-bottom: 2rem;
